[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ProjectPreview.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="ProjectPreview" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -752.0
margin_bottom = -413.0
rect_min_size = Vector2( 272, 187 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 265.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoColumn" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 62.0
margin_bottom = 173.0
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer/InfoColumn"]
margin_right = 62.0
margin_bottom = 14.0
text = "TitleLabel"

[node name="MainImage" type="TextureRect" parent="HBoxContainer"]
margin_left = 66.0
margin_right = 258.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
